# FreeCad-MCP

./: .gitignore  InitGui.py  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  test.yml
docs/design/: freecad-mcp-workbench.html  freecad-mcp-workbench.md  implementation-roadmap.html  implementation-roadmap.md  mcp-tools.html  mcp-tools.md
docs/status/: implementation-progress.html  status.html
docs/user/: installation.md  troubleshooting.md
freecad_mcp_workbench/: __init__.py  commands.py  controller.py  dependencies.py  errors.py  freecad_api.py  logging_config.py  models.py  schemas.py  server.py  tools.py  ui.py  validation.py
skills/freecad-mcp-workbench/: SKILL.md
skills/freecad-mcp-workbench/agents/: openai.yaml
tests/: conftest.py  test_models.py  test_server.py  test_tools.py
